--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.18.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rollup": "^3.29.4",
+    "sass": "^1.68.0"
   },
   "devDependencies": {
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@vitejs/plugin-react": "4.0.3",
-    "eslint": "8.45.0",
+    "eslint": "^8.45.0",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.3",
-    "vite": "4.4.5"
+    "typescript": "^5.4.2",
+    "vite": "^4.5.2"
   }
 }
